2003-01-10  Bruno Haible  <bruno@clisp.org>

	* linebreak.c (mbs_possible_linebreaks, mbs_width_linebreaks):
	Work around Solaris 2.9 iconv() bug.

2003-01-08  Bruno Haible  <bruno@clisp.org>

	* safe-read.h: Update from current gnulib version.
	* safe-read.c: Update from current gnulib version.
	* safe-write.h: Update from current gnulib version.
	* safe-write.c: Update from current gnulib version.
	* full-write.h: Update from current gnulib version.
	* full-write.c: Update from current gnulib version.

2002-12-16  Bruno Haible  <bruno@clisp.org>

	* copy-file.c: Include <sys/utime.h> if <utime.h> doesn't exist.
	Needed for mingw32.
	Reported by Steven Edwards <Steven_Ed4153@yahoo.com>.

2002-11-22  Bruno Haible  <bruno@clisp.org>

	* safe-write.h: New file, from current gnulib version.
	* safe-write.c: New file, from current gnulib version.
	* full-write.h: Update from current gnulib version.
	* full-write.c: Update from current gnulib version.
	* copy-file.c (copy_file): Change test of full_write return value.
	* Makefile.am (libgettextlib_la_SOURCES): Add safe-write.h,
	safe-write.c.

	* safe-read.h: Update from current gnulib version.
	* safe-read.c: Update from current gnulib version.

	* argmatch.h: Update from current gnulib version.
	* argmatch.c: Update from current gnulib version, with simplifications.

2002-11-19  Bruno Haible  <bruno@clisp.org>

	* pathmax.h: Update from current gnulib version.
	* obstack.h: Update from current gnulib version.
	* obstack.c: Update from current gnulib version.

2002-11-06  Bruno Haible  <bruno@clisp.org>

	* gcd.h (gcd): Change argument type to 'unsigned long'.
	* gcd.c (gcd): Likewise.

2002-11-15  Bruno Haible  <bruno@clisp.org>

	* alloca.c: Update from current gnulib version.
	* memset.c: Update from current gnulib version.

2002-11-13  Bruno Haible  <bruno@clisp.org>

	Assume ANSI C.
	* libstdarg.h: Remove file.
	* Makefile.am (LIBADD_SOURCE): Remove libstdarg.h.