@@ -1,3 +1,8 @@
+2003-01-12  Bruno Haible  <bruno@clisp.org>
+
+	* write-po.c (wrap): Add an assertion, to protect against Solaris 2.9
+	iconv() bug.
+
 2003-01-10  Bruno Haible  <bruno@clisp.org>
 
 	* po-charset.c (po_lex_charset_set): Work around Solaris 2.9 iconv()
